fixed spacing issue

--- a/app/assets/stylesheets/_style.scss
+++ b/app/assets/stylesheets/_style.scss
@@ -842,9 +842,9 @@ footer {
 .input_label {
   margin-bottom: 24px;
 
-  &:nth-child(5) {
-    margin-bottom: 0px;
-  }
+  // &:nth-child(5) {
+  //   margin-bottom: 0px;
+  // }
 }
 
 .remember__forget {
